# multirobot-sequential-task-allocation

./: README.md
GAZEBO/auctioneer/: README.md
GAZEBO/bidder/: CMakeLists.txt  report.md
GAZEBO/bidder/launch/: bidder.launch
GAZEBO/bidder/srv/: ServiceAwardTask.srv  ServiceWaypoints.srv
GAZEBO/random_waypoints/: package.xml
GAZEBO/random_waypoints/nodes/: random_waypoints
GAZEBO/random_waypoints/srv/: ServiceRandomWaypoint.srv
GAZEBO/tf_coordination/: CMakeLists.txt  setup.py
GAZEBO/tf_coordination/launch/: gazebo_tf_coordination.launch
OTHER_FILES/: README.md  report.md
auctioneer/: CMakeLists.txt  package.xml  setup.py
auctioneer/launch/: auctioneer.launch
auctioneer/nodes/: auctioneer
auctioneer/worlds/: leader.world
bidder/: package.xml  setup.py
bidder/launch/: gazebo_follower.launch
bidder/nodes/: bidder
random_waypoints/: CMakeLists.txt  setup.py
random_waypoints/launch/: gazebo_tf_coordination.launch  stage_tf_coordination.launch
tf_coordination/: package.xml
tf_coordination/launch/: tf_coordination.launch
tf_coordination/nodes/: tf_coordination
turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro
