<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>random_waypoints</name>
  <version>0.1.0</version>
  <description>
    ROS package for moving the robot in a polygon.
  </description>
  <maintainer email="liam.r.prevelige.23@dartmouth.edu">Class</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
